syntax = "proto3";

package identity.protobuf;

service IdentityService {
	rpc GetUserInfo(GetUserRequest) returns (UserInfo);
}

message GetUserRequest {
	string id = 1;
}

message UserInfo {
	string user_id = 1;
	string email = 2;
	string first_name = 3;
	string last_name = 4;
	bool is_email_confirmed = 5;
	Role role = 6;
	Gender gender = 7;
}

enum Role {
	USER = 0;
	ADMIN = 1;
}

enum Gender {
	MALE = 0;
	FEMALE = 1;
	UNDEFINED = 2;
}